@@ -32,7 +32,21 @@ class LocalRepositoryChangeSetJob(repository.ChangeSetJob):
 
     def addTrove(self, oldTroveSpec, trove):
         pin = self.autoPinList.match(trove.getName())
-	return self.repos.addTrove(oldTroveSpec, trove, pin = pin)
+
+        if oldTroveSpec[1] is not None:
+            oldTroveList = [ oldTroveSpec ]
+        else:
+            oldTroveList = []
+        # oldTroveSpec hasn't been removed yet, so won't show up in
+        # findRemovedByName
+        oldTroveList = self.repos.findRemovedByName(trove.getName())
+        l = []
+        for info in oldTroveList:
+            if info[1].branch() == trove.getVersion().branch():
+                l.append(info)
+        del oldTroveList
+
+	return self.repos.addTrove(l, trove, pin = pin)
 
     def addTroveDone(self, troveId):
 	pass
