@@ -1,5 +1,8 @@
 Changes in 0.62.3:
   * Don't link troves to groups when the branch has changed
+  * Link new troves to collections (and new collections to old troves) when 
+    a trove isn't installed but a suitable replacement (meaning on the same
+    branch) is available
 
 Changes in 0.62.2:
   * Further reworkings of update code to be fully based on job sets. The
